objects/Survey_Admin__c.object
<CustomObject>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region1__c</fullName>
        <label>Support Center</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Customer_Survey__c</referenceTo>
        <relationshipLabel>Survey Admin</relationshipLabel>
        <relationshipName>Survey_Admin</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Admin</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey__c</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Region1__c</columns>
        <columns>Support_Level__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Admin</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>